--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/app_background"
     tools:context=".MainActivity">
 
     <android.support.design.widget.AppBarLayout
@@ -20,11 +21,11 @@
 
     </android.support.design.widget.AppBarLayout>
 
-    <include layout="@layout/content_main" />
+    <include layout="@layout/content_mai" />
 
     <TextView
-        android:id="@+id/ModeViewer"
-        android:layout_width="200dp"
+        android:id="@+id/fly_mode"
+        android:layout_width="1dp"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:layout_marginTop="300dp"
@@ -32,7 +33,7 @@
 
     <TextView
         android:id="@+id/AngleView"
-        android:layout_width="200dp"
+        android:layout_width="1dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="250dp"
         android:layout_gravity="center"
