--- a/app/src/main/res/drawable/btn_mic_rec.xml
+++ b/app/src/main/res/drawable/btn_mic_rec.xml
@@ -11,13 +11,12 @@
                 />
             <!--设置渐变色-->
             <gradient
-                android:startColor="#6fd99d"
-                android:centerColor="#63cfc3"
-                android:endColor="#57c5e9"
+                android:startColor="#000000"
+                android:endColor="#ffffff"
                 />
         </shape>
     </item>
-    <item>
+    <item android:state_pressed="false">
         <shape xmlns:android="http://schemas.android.com/apk/res/android">
             <!--设置圆角-->
             <corners  android:radius="50dp"/>
