--- a/app/src/main/res/layout/activity_guideview.xml
+++ b/app/src/main/res/layout/activity_guideview.xml
@@ -4,6 +4,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical" >
 
+    <include layout="@layout/content_main_t"/>
     <android.support.v4.view.ViewPager
         android:id="@+id/viewpager"
         android:layout_width="match_parent"
